Fix driver name alignment and car preview loading issue

--- a/css/event.css
+++ b/css/event.css
@@ -1286,7 +1286,7 @@ li a.red {
 
 .driver {
   margin-bottom: 20px;
-  min-width: 250px;
+  padding: 5px;
 }
 
 #livery-preview img {
